--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Coocloudshlack</title>
-    <meta name="description" content="">
+    <title>coocloud slack</title>
+    <meta name="description" content="coocloud slack channel">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
