--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
     <title>coocloud slack</title>
     <meta name="description" content="coocloud slack channel">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="icon"-->
-          <!--type="image/png"-->
-          <!--href="https://www.coocloud.co.za/icons/icon-48x48.png">-->
+    <link rel="icon"
+          type="image/png"
+          href="https://www.coocloud.co.za/icons/icon-48x48.png">
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
